# af

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  TODO.md  af-selfcheck.toml  af-toolchain.toml  af-workspace.toml  compliance_matrix.csv  compliance_matrix.json  deno.json  docker-compose.yml  lefthook.yml
.claude/agents/: af-error-explainer.md  af-issue-author.md  af-registry-curator.md  af-report-reader.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
crates/af-architecture/: Cargo.toml
crates/af-architecture/src/: lib.rs
crates/af-architecture/tests/: contracts.rs  vendor_markers.rs
crates/af-architecture/tests/common/: mod.rs
crates/af-backend/: Cargo.toml
crates/af-backend-fusesoc/: Cargo.toml
crates/af-backend-fusesoc/src/: lib.rs
crates/af-backend-fusesoc/tests/: command_spec.rs
crates/af-backend-native/: Cargo.toml
crates/af-backend-native/src/: lib.rs
crates/af-backend-native/tests/: native_backend.rs
crates/af-backend-verilator/: Cargo.toml
crates/af-backend-verilator/src/: lib.rs
crates/af-backend-verilator/tests/: command_spec.rs
crates/af-backend/src/: lib.rs
crates/af-board-db/: Cargo.toml
crates/af-board-db/src/: lib.rs
crates/af-board-db/tests/: proptest_registry_parser.rs  registry_edge_cases.rs
crates/af-cli/: Cargo.toml
crates/af-cli/src/: agent.rs  catalog_readiness.rs  cores_registry.rs  main.rs  tooling.rs
crates/af-cli/src/ci/: artifacts.rs  config.rs  detector.rs  diagnostics.rs  mod.rs  policy.rs  profiles.rs  renderer.rs  report.rs  scanner.rs  updater.rs  workflow.rs
crates/af-cli/src/commands/: backend.rs  ci_add_board.rs  ci_doctor.rs  ci_improve.rs  ci_init.rs  ci_render.rs  ci_run_local.rs  ci_validate.rs  core_new.rs  evidence.rs  mod.rs  release_check.rs  self_check.rs  wrapper.rs
crates/af-cli/tests/: architecture_resource_signoff.rs  backend_run.rs  backend_scaffold.rs  backend_unavailable.rs  backend_unavailable_matrix.rs  board_validate.rs  build_clean.rs  build_root_layout.rs  ci.rs  ci_init.rs  ci_subcommands.rs  cli.rs  cli_snapshots.rs  core_lint_sim.rs  core_new.rs  core_package.rs  cross_crate_invariants.rs  determinism.rs  envelope_sweep.rs  errors_contract.rs  evidence_chain.rs  exit_codes.rs  flash_report.rs  json_envelope.rs  json_no_timestamps.rs  legal_envelope.rs  path_normalization.rs  portable_envelope.rs  project_commands.rs  public_surface.rs  registry_lists.rs  schema_validation.rs  self_check_inventory.rs  sort_order_determinism.rs  sort_order_registry_list.rs  standards_profile.rs  tier_verify_matrix.rs  tooling.rs  vectors_generate.rs  wrapper_subcommands.rs
crates/af-cli/tests/fixtures/: af_error_codes.txt
crates/af-cli/tests/snapshots/: cli_snapshots__core_check_topology.snap  cli_snapshots__doctor_topology.snap  cli_snapshots__manifest_validate_topology.snap
crates/af-complexity/: Cargo.toml
crates/af-complexity/src/: lib.rs
crates/af-complexity/tests/: proptest_scoring.rs
crates/af-constructor-export/: Cargo.toml
crates/af-constructor-export/src/: lib.rs
crates/af-constructor-export/tests/: export.rs
crates/af-core/: Cargo.toml
crates/af-core/src/: lib.rs
crates/af-core/tests/: legal_policy.rs  proptest_legal_policy.rs
crates/af-manifest/: Cargo.toml
crates/af-manifest/src/: lib.rs  standards.rs
crates/af-manifest/tests/: proptest_parser.rs
crates/af-report/: Cargo.toml
crates/af-report/examples/: dump_schema.rs
crates/af-report/src/: .lib.rs.pending-snap  lib.rs
crates/af-report/tests/: environment_hash_regression.rs  schema_snapshot.rs
crates/af-resource-model/: Cargo.toml
crates/af-resource-model/src/: lib.rs
crates/af-resource-model/tests/: bram_formula.rs  dsp_policy.rs
crates/af-resource-model/tests/common/: mod.rs
crates/af-rtl-inspector/: Cargo.toml
crates/af-rtl-inspector/src/: lib.rs
crates/af-rtl-inspector/tests/: portable_rules.rs  proptest_marker_variants.rs
crates/af-security/: Cargo.toml
crates/af-security/src/: lib.rs
crates/af-security/tests/: proptest_paths.rs
crates/af-template/: Cargo.toml
crates/af-template/src/: lib.rs
crates/af-template/tests/: scaffold.rs
crates/af-vectors/: Cargo.toml
crates/af-vectors/src/: lib.rs  main.rs
crates/af-vectors/tests/: determinism.rs  golden.rs  proptest_xorshift.rs
crates/af-vectors/tests/data/: mod_add.golden.json
crates/af-wrapper-gen/: Cargo.toml
crates/af-wrapper-gen/src/: lib.rs
crates/af-wrapper-gen/tests/: golden_artifacts.rs  wrapper_targets.rs
crates/af-wrapper-gen/tests/common/: mod.rs
crates/af-wrapper-gen/tests/snapshots/: golden_artifacts__fusesoc_af_mod_add.snap  golden_artifacts__ipxact_af_mod_add.snap  golden_artifacts__litex_af_mod_add_arty_a7.snap
docs/: af-ci-config.md  af-ci-examples.md  af-ci-security.md  af-ci-targets.md  af-ci.md  af-i2s-rx-start-guide.ru.md  agent-workflow.md  architecture.md  backend-author-guide.md  board-author-guide.md  board_matrix.md  cli-reference.md  core-author-guide.md  dev-roadmap.md  docker-runtime.md  first-10-minutes.md  fpga-chat-backend.md  known-limitations.md  licensing.md  manifest-reference.md  product-requirements.md  production-readiness.md  provenance.md  release-process.md  reproducible-builds.md  roadmap.md  security-model.md  semver-policy.md  software-requirements-specification.md  technical-design.md  testing-strategy.md  vendor-tooling.md
docs/agent/: README.md  (+3 more)
examples/: README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: board_registry_json.rs  ci_generate_options.rs  manifest_toml.rs  rtl_source.rs  security_paths.rs
registries/: board_aliases.json  cores.registry.json
reports/: README.md
schemas/: af-board.schema.json  af-core.schema.json  af-report.schema.json  cores.registry.schema.json
scripts/: check-af-skills.sh  docker-smoke.sh  install-af-codex-skills.sh  install-core-integration-tools.sh  install-oss-hdl-tools.sh  install-smt-solvers.sh  oss-hdl-smoke.sh  pre-install.sh
skills/: README.md
(+178 files in other folders)
