[package]
name = "af-backend-native"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
af-backend.workspace = true
af-core.workspace = true
af-manifest.workspace = true
af-rtl-inspector.workspace = true

[dev-dependencies]
tempfile.workspace = true
