[package]
name = "af-backend-verilator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
af-backend.workspace = true
af-manifest.workspace = true
af-security.workspace = true
serde.workspace = true
thiserror.workspace = true
