[package]
name = "af-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "af"
path = "src/main.rs"

[dependencies]
af-backend.workspace = true
af-backend-flash.workspace = true
af-backend-fusesoc.workspace = true
af-backend-icarus.workspace = true
af-backend-litex.workspace = true
af-backend-native.workspace = true
af-backend-nextpnr.workspace = true
af-backend-sby.workspace = true
af-backend-vendor.workspace = true
af-backend-verilator.workspace = true
af-backend-yosys.workspace = true
af-board-db.workspace = true
af-ci.workspace = true
af-complexity.workspace = true
af-compatibility.workspace = true
af-constructor-export.workspace = true
af-architecture.workspace = true
af-core.workspace = true
af-manifest.workspace = true
af-report.workspace = true
af-resource-model.workspace = true
af-security.workspace = true
af-signoff.workspace = true
af-template.workspace = true
af-vectors.workspace = true
af-wrapper-gen.workspace = true
clap.workspace = true
miette.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
