[package]
name = "af-constructor-export"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
af-board-db.workspace = true
af-manifest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
