[package]
name = "af-core"
version = "0.2.0-rc.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
af-manifest.workspace = true
af-rtl-inspector.workspace = true
af-security.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
