[package]
name = "af-report"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
af-backend.workspace = true
af-manifest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true

[[example]]
name = "dump_schema"
path = "examples/dump_schema.rs"
