[package]
name = "af-vectors"
version = "0.2.0-rc.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
af-field-ref = { path = "../af-field-ref" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
