[package]
name = "af-wrapper-gen"
version = "0.2.0-rc.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
af-backend-fusesoc.workspace = true
af-backend-litex.workspace = true
af-core.workspace = true
af-manifest.workspace = true
af-security.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
